@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-05-25"
 #define RUBY_VERSION_CODE 186
 #define RUBY_RELEASE_CODE 20100525
-#define RUBY_PATCHLEVEL 400
+#define RUBY_PATCHLEVEL 401
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
